Fixed up the legend. Doesn't break the map anymore (repeated appends).

--- a/css/style.css
+++ b/css/style.css
@@ -683,8 +683,8 @@ more media queries
 /*Legend*/
 .legend {
     background-color: #fff;
-    width: 10.25%;
-    height: 15%;
+    width: 14.5%;
+    height: 100%;
     border: 4px solid #555;
     margin: 1% auto;
     left: 16%;
@@ -698,4 +698,9 @@ more media queries
 #linearLegend .colorlegend-title {
     font-size: 1.5em;
     fill: #3a3a3a;
+}
+
+#legendBox {
+    position: relative;
+    height: 70px;
 }
